fix(bug): Dependency Details card text overflow to new line(#147)

--- a/src/app/stack/report-summary/report-summary-card/report-summary-content/report-info-entries/report-info-entries.component.less
+++ b/src/app/stack/report-summary/report-summary-card/report-summary-content/report-info-entries/report-info-entries.component.less
@@ -23,4 +23,7 @@
             display: block;
         }
     }
+    .no-wrap {
+        white-space: nowrap;
+    }
 }
